move .env to /server remove google keys

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApkZyvM6S0-OJ1Zk6kJk2WPhyZdfILk6c&libraries=places"></script>
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=??????????????????????????&libraries=places"></script>
   <script src="/dist/bundle.js"></script>
 
 </body>
